# googlecloud-storage-tutorial

./: .env.example  .gitignore  Makefile  Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
files/: sample_csv.csv
googlecloud_storage_tutorial/: __init__.py  storage.py
